--- a/lib/variables.css
+++ b/lib/variables.css
@@ -12,6 +12,48 @@
   --iu-color-white: #ffffff;
   --iu-color-black: #000000;
 
+  /* Neutral Colors and Shades */
+  --iu-color-neutral-100: #ffffff; /* Light Gray */
+  --iu-color-neutral-200: #f8f8f8; /* Soft Gray */
+  --iu-color-neutral-300: #e0e0e0; /* Medium Gray */
+  --iu-color-neutral-400: #b0b0b0; /* Darker Gray */
+  --iu-color-neutral-500: #808080; /* Charcoal Gray */
+
+  /* Primary Color and Shades */
+  --iu-color-primary-100: #ebf5fe; /* Very Light Blue */
+  --iu-color-primary-200: #a4cffd; /* Light Blue */
+  --iu-color-primary-300: #77b7fc; /* Main Primary Blue */
+  --iu-color-primary-400: #499dfb; /* Dark Blue */
+  --iu-color-primary-500: #2a84e0; /* Very Dark Blue */
+
+  /* Secondary Color and Shades */
+  --iu-color-secondary-100: #f5f5f5; /* Very Light Gray */
+  --iu-color-secondary-200: #e0e0e0; /* Light Gray */
+  --iu-color-secondary-300: #bdbdbd; /* Main Secondary Gray */
+  --iu-color-secondary-400: #9e9e9e; /* Dark Gray */
+  --iu-color-secondary-500: #757575; /* Very Dark Gray */
+
+  /* Success Color and Shades */
+  --iu-color-success-100: #ecfdf5; /* Very Light Green */
+  --iu-color-success-200: #a7f3d0; /* Light Green */
+  --iu-color-success-300: #34d399; /* Main Success Green */
+  --iu-color-success-400: #10b981; /* Dark Green */
+  --iu-color-success-500: #059669; /* Very Dark Green */
+
+  /* Warning Color and Shades */
+  --iu-color-warning-100: #fef3c7; /* Very Light Yellow */
+  --iu-color-warning-200: #fde68a; /* Light Yellow */
+  --iu-color-warning-300: #fcd34d; /* Main Warning Yellow */
+  --iu-color-warning-400: #fbbf24; /* Dark Yellow */
+  --iu-color-warning-500: #f59e0b; /* Very Dark Yellow */
+
+  /* Error Color and Shades */
+  --iu-color-error-100: #fee2e2; /* Very Light Red */
+  --iu-color-error-200: #fca5a5; /* Light Red */
+  --iu-color-error-300: #f87171; /* Main Error Red */
+  --iu-color-error-400: #ef4444; /* Dark Red */
+  --iu-color-error-500: #dc2626; /* Very Dark Red */
+
   --iu-border-radius-base: 0.6rem; /* 10px */
   --iu-border-base: 0.18rem;
 }
